Piratenpartij Amsterdam Editie

--- a/www/console.htm
+++ b/www/console.htm
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>ESP8266 Mobile Rick Roll</title>
+    <title>ESP8266 Mobile Rick Roll Piratenpartij Edition</title>
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile.js"></script>
     <link href="css/jquery.mobile.css" rel="stylesheet" />
@@ -20,7 +20,7 @@
     <div data-role="page" id="gui">
         <div data-role="header" id="header">
             <a href="#info" data-icon="info" data-transition="slide" data-direction="reverse">INFO</a>
-            <h1>ESP8266 Mobile Rick Roll</h1>
+            <h1>ESP8266 Mobile Rick Roll Piratenpartij Edition</h1>
             <a href="#settings" data-icon="gear" data-transition="slide" class="ui-btn-right">Settings</a>
         </div>
         <div data-role="content">
@@ -79,7 +79,7 @@
 
     <div data-role="page" id="info">
         <div data-role="header">
-            <h1>ESP8266 Mobile Rick Roll</h1>
+            <h1>ESP8266 Mobile Rick Roll Piratenpartij Edition</h1>
             <a data-rel="back" data-icon="back">Back</a>
         </div>
         <div data-role="content">
