--- a/www/info.htm
+++ b/www/info.htm
@@ -1,11 +1,11 @@
-<div style="float:left">
-    <img src="media/w.png" style="padding: 5px;" />
-</div>
-<div style="font-size: 20px; font-weight:bold">Rickrolling</div>
-<div style="font-size: 12px;">From Wikipedia, the free encyclopedia</div>
-<br />
+<div style="font-size: 20px; font-weight:bold">Op 21 maart zijn er verkiezingen.</div>
+<div style="font-size: 12px;">Stem tegen de Sleepwet, en voor de Piratenpartij.</div>
+<br /
 <div>
-    <b>Rickrolling</b>, alternatively <b>rick-rolling</b>, is a prank and an Internet meme involving an unexpected appearance of the music video for the 1987 Rick Astley song "Never Gonna Give You Up". The meme is a type of bait and switch using a disguised
-    hyperlink. Those led to the music video believing that they were accessing some unrelated material (in this case, "FREE WiFi") are said to have been <i>rickrolled</i>. The trend has extended to disruptive or humorous appearances of the song in other
-    situations, such as a live appearance of Astley himself in the 2008 Macy's Thanksgiving Day Parade in New York.
+U had verwacht met het netwerk van de NS verbonden te worden. 99% kans dat u de voorwaarden van het wifi-netwerk niet gelezen heeft.<br>
+<br>
+Waarom zou je de kleine lettertjes in de voorwaarden ook lezen. Je wilde alleen even snel je werkmail lezen, een boze tweet over een vertraagde trein of een leuke onderweg-selfie posten en tegen gratis WiFi heb je nog nooit nee gezegd.<br>
+<br>
+De NS kan jouw gegevens gebruiken en jouw surfgedrag opslaan vanaf het moment dat jij die voorwaarden accepteert en het NS netwerk gebruikt. Zo weet de NS waar jij heen gaat, met wie je tijdens je treinreis communiceert en waar je vandaan komt. Dat lijkt verdacht veel op de sleepwet.<br>
+Maar maakt u zich geen zorgen, wij verzamelen op dit moment niks en hebben geen slechte bedoelingen. Wij vragen enkel uw aandacht voor uw eigen privacy.
 </div>
