--- a/www/index.htm
+++ b/www/index.htm
@@ -34,7 +34,7 @@
         <a href="sf.htm">https://www.eff.org/deeplinks/2018/02/san-francisco-building-community-broadband-protect-net-neutrality-and-online</a>
       </p>
       <center>
-        <img src="img/ppalogo.jpg">
+        <img src="img/ppalogo.jpg" style="max-width: 100%">
       </center>
     </div>
   </body>
