--- a/www/index.htm
+++ b/www/index.htm
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">
     <title>Welkom op het Wi-Fi netwerk van Piratenpartij Amsterdam</title>
   </head>
-  <body onload="trigger()">>
+  <body onload="trigger()">
     <div class="container" style="color: #572b85">
       <h1>Welkom op het Wi-Fi netwerk van Piratenpartij Amsterdam <img src="img/ppalogo.jpg" height="64"></h1>
       <p>
